--- a/package.json
+++ b/package.json
@@ -10,48 +10,34 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "14.2.12",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "14.2.12",
-    "@angular/compiler": "14.2.12",
-    "@angular/core": "14.2.12",
-    "@angular/forms": "14.2.12",
-    "@angular/material": "14.2.7",
-    "@angular/platform-browser": "14.2.12",
-    "@angular/platform-browser-dynamic": "14.2.12",
-    "@angular/router": "14.2.12",
+    "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
     "rxjs": "~6.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.10",
-    "@angular-eslint/eslint-plugin": "14.0.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.4",
-    "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "14.2.12",
-    "@angular/language-service": "14.2.12",
-    "@ngrx/schematics": "14.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^16.11.9",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
-    "eslint": "8.20.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-ngrx": "^2.1.0",
-    "jasmine-core": "4.2.0",
-    "jasmine-marbles": "^0.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "6.4.1",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular/cli": "~13.3.11",
+    "@angular/compiler-cli": "~13.3.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.0.0",
-    "karma-jasmine": "5.1.0",
-    "karma-jasmine-html-reporter": "2.0.0",
-    "ng-packagr": "14.2.2",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
+    "typescript": "~4.6.2"
   },
   "engines": {
     "node": ">=16.13.0"
